# Rust-HB

./: .gitignore  Cargo.toml  run_hb.bat
crates/app/: Cargo.toml
crates/app/src/: action_executor.rs  i18n.rs  ipc_client_wrapper.rs  main.rs  state_monitor.rs  supervisor.rs  tui.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/bot-framework/: Cargo.toml
crates/bot-framework/src/: bot_manager.rs  default_routine.rs  events.rs  lib.rs  plugin_manager.rs  routine_manager.rs  task_manager.rs
crates/compression/: Cargo.toml
crates/compression/src/: lib.rs
crates/core/: Cargo.toml
crates/core/examples/: check_modules.rs  open_test.rs  test_open.rs
crates/core/src/: config.rs  error.rs  lib.rs  log.rs  win32.rs
crates/game-api/: Cargo.toml
crates/game-api/src/: dialog_handlers.rs  game_actions.rs  game_state.rs  lib.rs  scene_detector.rs
crates/inject/: Cargo.toml
crates/inject/examples/: inject.rs
crates/inject/src/: lib.rs  minimal.rs
crates/input-sim/: Cargo.toml
crates/input-sim/src/: bezier.rs  ffi.rs  keyboard.rs  lib.rs  mouse.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: lib.rs
crates/mono-bridge/: Cargo.toml
crates/mono-bridge/examples/: analyze_refs.rs  class_hunter.rs  diagnose.rs  domain_nav.rs  extract_offsets.rs  fast_scan.rs  final_scan.rs  heap_scan.rs  reverser.rs  scan.rs  turbo_scan.rs  validate.rs  verify_asm.rs
crates/mono-bridge/src/: class_cache.rs  lib.rs  mappers.rs  mono_class.rs  mono_image.rs  mono_runtime.rs  mono_structs.rs  scanner.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: auto_stop.rs  lib.rs  monitor.rs  quest.rs  stats.rs
crates/process-mgr/: Cargo.toml
crates/process-mgr/src/: lib.rs
crates/silverfish-card-db/: Cargo.toml  build.rs  extract_cards.js  extract_keywords.js
crates/silverfish-card-db/src/: lib.rs
crates/silverfish-core/: Cargo.toml
crates/silverfish-core/src/: action.rs  ai.rs  behavior.rs  card_db.rs  enemy_turn_simulator.rs  lib.rs  mini_simulator.rs  minion.rs  move_generator.rs  penality_manager.rs  playfield.rs  sim_template.rs  weapon.rs
crates/silverfish-core/tests/: integration.rs
crates/silverfish-sim-cards/: Cargo.toml
crates/silverfish-sim-cards/src/: lib.rs
crates/silverfish-sim-cards/src/classic/: mod.rs
crates/silverfish-sim-cards/src/tgt/: mod.rs
ipc-plugin/: RustIPCPlugin.cs  RustIPCPlugin.csproj
进展/: 2026-05-17-0000-项目全景分析与重构总体规划.md  2026-05-17-0001-环境准备与Rust工具链安装.md  2026-05-17-0002-Rust工作区结构搭建完成.md  2026-05-17-0003-完整代码骨架与首次构建验证.md  2026-05-17-0004-全量编译通过与项目结构确认.md  2026-05-17-0007-全量编译验证与项目状态总结.md  2026-05-17-0008-下一步实施计划.md  2026-05-17-0009-Playfield_do_action核心链路实现.md  2026-05-17-0010-专业并行实施方案.md  2026-05-17-0011-并行三轨执行与AI引擎完成.md  2026-05-17-0012-缺陷修补与测试验证完成.md  2026-05-17-0013-未完成工作全景清单.md  2026-05-17-0014-第三轮实施计划.md  2026-05-17-0015-第三轮实施完成.md  2026-05-17-0016-第四轮实施计划.md  2026-05-17-0017-第四轮实施完成.md  2026-05-18-0000-环境就绪与首次32位编译验证.md  2026-05-18-0001-CardDB代码生成引擎完成.md  2026-05-18-0018-游戏连接测试归档.md  2026-05-18-0019-AI引擎测试覆盖提升.md  2026-05-18-0020-Bot框架串联.md  2026-05-18-0021-最终完善全部任务完成.md  2026-05-18-0022-Git初始化与GitHub推送.md  2026-05-18-0023-反射总结.md  2026-05-18-0024-测试覆盖全面升级.md  2026-05-18-0025-逆向Mono运行时进展.md  2026-05-18-0026-路线A-BepInEx-IPC插件.md  2026-05-23-0027-异步架构重构完成.md  2026-05-23-0028-IPC插件新增MonoClass探查命令.md
