[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/mono-bridge",
    "crates/process-mgr",
    "crates/input-sim",
    "crates/game-api",
    "crates/bot-framework",
    "crates/silverfish-core",
    "crates/silverfish-card-db",
    "crates/silverfish-sim-cards",
    "crates/plugins",
    "crates/auth",
    "crates/compression",
    "crates/ipc",
    "crates/app",
    "crates/inject",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Hearthbuddy Rust rewrite - Hearthstone automation framework"

[workspace.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Console",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Diagnostics_Debug",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Input_Ime",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
once_cell = "1"
lazy_static = "1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
base64 = "0.22"
flate2 = "1"
crossbeam = "0.8"
dashmap = "6"
arc-swap = "1"
parking_lot = "0.12"
enum-map = "2"
enumflags2 = "0.7"
phf = { version = "0.11", features = ["macros"] }
clap = { version = "4", features = ["derive"] }
ratatui = "0.28"
crossterm = "0.28"
async-trait = "0.1"
