[package]
name = "hb-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Authentication module"

[dependencies]
hb-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
thiserror.workspace = true
