[package]
name = "hb-bot-framework"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bot/Plugin/Routine framework and plugin management"

[dependencies]
hb-core = { path = "../core" }
hb-game-api = { path = "../game-api" }
hb-silverfish-core = { path = "../silverfish-core" }
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap.workspace = true
parking_lot.workspace = true
tokio.workspace = true
