[package]
name = "hb-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hearthbuddy core runtime: logging, configuration, common utilities"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
