[package]
name = "hb-game-api"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Hearthstone game interaction API (replaces TritonHs)"

[dependencies]
windows.workspace = true
hb-core = { path = "../core" }
hb-mono-bridge = { path = "../mono-bridge" }
hb-input-sim = { path = "../input-sim" }
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
