[package]
name = "hb-input-sim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Input simulation: Bezier curve mouse movement, keyboard simulation"

[dependencies]
hb-core = { path = "../core" }
rand.workspace = true
tracing.workspace = true
thiserror.workspace = true
