[package]
name = "hb-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Built-in plugins: AutoStop, Monitor, Quest, Stats"

[dependencies]
hb-core = { path = "../core" }
hb-bot-framework = { path = "../bot-framework" }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
